--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.datasource.url: jdbc:mysql://localhost/testproject
+#spring.datasource.url: jdbc:mysql://localhost/testproject
+spring.datasource.url: jdbc:mysql://localhost:3306/testproject
 spring.datasource.username=root
-spring.datasource.password=root
+#spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.hibernate.naming_strategy = org.hibernate.cfg.ImprovedNamingStrategy
 
